@@ -113,6 +113,13 @@ ffff 0010 00002320 0013 000a 0014 0000
 # actions=controller(reason=invalid_ttl,max_len=1234,id=5678)
 ffff 0010 00002320 0014 04d2 162e 02 00
 
+# actions=controller(reason=invalid_ttl,max_len=1234,id=5678,userdata=01.02.03.04.05)
+ffff 0038 00002320 0025   000000000000 dnl
+0000 0008 04d2   0000 dnl
+0001 0008 162e   0000 dnl
+0002 0005 02   000000 dnl
+0003 0009 0102030405   00000000000000
+
 # actions=dec_ttl(32768,12345,90,765,1024)
 ffff 0020 00002320 0015 000500000000 80003039005A02fd 0400000000000000
 
